# documentation-pdf-scraper

./: .gitignore  AGENTS.md  Makefile  README.md  config.json  eslint.config.js  package-lock.json  package.json  project-context.md  pyproject.toml  vitest.config.js
.claude/commands/: bmad-tea-teach-me-testing.md  bmad-tea-testarch-atdd.md  bmad-tea-testarch-automate.md  bmad-tea-testarch-ci.md  bmad-tea-testarch-framework.md  bmad-tea-testarch-nfr.md  bmad-tea-testarch-test-design.md  bmad-tea-testarch-test-review.md  bmad-tea-testarch-trace.md
.github/: dependabot.yml
.github/workflows/: ci.yml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
doc-targets/: claude-code.json  cloudflare-blog.json  openclaw-zh-cn.json
docs/: 2026-02-11-project-full-review.md
docs/plans/: 2026-02-11-application-minimal-e2e.md  2026-02-11-openclaw-zh-cn-doc-target.md  2026-02-11-progress-retry-state-hardening.md  2026-02-12-vitest-migration.md
scripts/: reproduce-issue.js  reproduce-table.js  test-hierarchical-toc.js  test-section-structure-format.js  update-openclaw-target-urls.js  use-doc-target.js  verify-expansion.js  verify-openclaw-target-coverage.js  verify-real-file.js
src/: app.js
src/config/: configLoader.js  configValidator.js  loader.js  schema.js
src/core/: pythonRunner.js  scraper.js  setup.js
src/services/: fileService.js  (+7 more)
tests/: app.test.js
(+45 files in other folders)
